# snowbridge-nft

./: README.md  README.md.orig
ethereum/: README.md  package.json
ethereum/.cache/: solidity-files-cache.json
ethereum/.deployments/localhost/: .migrations.json  BasicInboundChannel.json  BasicOutboundChannel.json  BeefyLightClient.json  Bitfield.json  DOTApp.json  ERC721App.json  ETHApp.json  IncentivizedInboundChannel.json  IncentivizedOutboundChannel.json  MerkleProof.json  ParachainLightClient.json  ScaleCodec.json  SimplifiedMMRVerification.json  TestToken721.json  TestToken721Enumerable.json  ValidatorRegistry.json
ethereum/artifacts/contracts/ERC721App.sol/: ERC721App.dbg.json  ERC721App.json
ethereum/artifacts/contracts/test/MockOutboundChannel.sol/: MockOutboundChannel.dbg.json  MockOutboundChannel.json
ethereum/artifacts/contracts/test/TestToken721.sol/: TestToken721.json
ethereum/artifacts/contracts/test/TestToken721Enumerable.sol/: TestToken721Enumerable.json
ethereum/contracts/: ERC721App.sol  Imports.sol  Verifier.sol
ethereum/contracts/test/: MockOutboundChannel.sol
ethereum/deploy/: 20-configure-channels.ts
ethereum/tasks/: contractAddress.ts
ethereum/test/: helpers.js
parachain/: Cargo.toml  README.md
parachain/pallets/erc721-app/: Cargo.toml
parachain/pallets/erc721-app/src/: lib.rs  mock.rs  tests.rs
parachain/pallets/nft/: Cargo.toml
parachain/pallets/nft/src/: lib.rs
parachain/primitives/core/: Cargo.toml
parachain/primitives/core/src/: lib.rs
parachain/primitives/nft-core/: Cargo.toml
parachain/runtime/common/: Cargo.toml
parachain/runtime/snowbase/: Cargo.toml
parachain/runtime/snowbase/src/: lib.rs
test/: README.md
(+27 files in other folders)
