[package]
name = "snowbridge-runtime-common"
description = "Snowbridge Runtime Common"
version = "0.1.0"
authors = ["Snowfork <contact@snowfork.com>"]
edition = "2018"
repository = "https://github.com/Snowfork/snowbridge"

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17", default-features = false }

snowbridge-core = { git = "https://github.com/Snowfork/snowbridge.git", branch="alistair/remove-nft", default-features = false }
basic-channel = { git = "https://github.com/Snowfork/snowbridge.git", branch="alistair/remove-nft", package = "snowbridge-basic-channel", default-features = false }
incentivized-channel = { path = "../../pallets/incentivized-channel", package = "snowbridge-incentivized-channel", default-features = false }

snowbridge-nft-core = { path = "../../primitives/nft-core", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "snowbridge-core/std",
    "snowbridge-nft-core/std",
    "basic-channel/std",
    "incentivized-channel/std",
]
